--- a/checkout.html
+++ b/checkout.html
@@ -197,7 +197,7 @@
                                     <div id="sub" class="container-number"><h3>$ 0</h3></div>
                                 </div>
                                 <div class="container-total-iva">
-                                    <div class="iva"><h3>Iva: </h3></div>
+                                    <div class="iva"><h3>Iva: <i id="info-iva" class="fi fi-rr-interrogation inte-info"></i></h3></div>
                                     <div id="iva" class="container-number"><h3>$ 0</h3></div>
                                 </div>
                                 <div class="container-total-total">
