--- a/checkout.html
+++ b/checkout.html
@@ -204,8 +204,8 @@
                                     <div class="iva">
                                         <h3>IVA: <i id="info-iva" class="fi fi-rr-interrogation inte-info">
                                                 <div id="popup" style="visibility: hidden; position: absolute;" class="container-info">
-                                                    <a class="btn-cerrar-popup"><i id="btn-cerrar-popup" class="fas fa-times"></i></a>
-                                                    <p class="paragraph-info">Este es un impuesto indirecto, el cual recae sobre los costos de cada venta generada</p>
+                                                    <a class="btn-cerrar-popup"><i id="btn-cerrar-popup" class="fas fa-times closed"></i></a>
+                                                    <p style="color: black;" class="paragraph-info">Este es un impuesto indirecto, el cual recae sobre los costos de cada venta generada</p>
                                                 </div>
                                             </i></h3>
                                     </div>
