--- a/checkout.html
+++ b/checkout.html
@@ -89,10 +89,10 @@
                 <div class="page-pro">
                     <div class="container">
                         <!-- Checkout Container Start -->
-                        <div class="container_product text-center" id="container_product">
+                        <div data-aos="zoom-out" data-aos-delay="200" class="container_product text-center" id="container_product">
                             <div>
                                 <div class="booking-form">
-                                    <form netlify>
+                                    <form id="form" netlify>
                                         <div class="control-group">
                                             <div id="content-input" class="input-group">
                                                 <div id="products" class="form-control"></div>
@@ -202,12 +202,11 @@
                                 </div>
                                 <div class="container-total-iva">
                                     <div class="iva">
-                                        <h3>IVA: <i id="info-iva" class="fi fi-rr-interrogation inte-info">
-                                                <div id="popup" style="visibility: hidden; position: absolute;" class="container-info">
-                                                    <a class="btn-cerrar-popup"><i id="btn-cerrar-popup" class="fas fa-times closed"></i></a>
-                                                    <p style="color: black;" class="paragraph-info">Este es un impuesto indirecto, el cual recae sobre los costos de cada venta generada</p>
-                                                </div>
-                                            </i></h3>
+                                        <h3>IVA: <i id="info-iva" class="fi fi-rr-interrogation inte-info"></i></h3>
+                                    </div>
+                                    <div id="popup" style="visibility: hidden; position: absolute;" class="container-info">
+                                        <a class="btn-cerrar-popup"><i id="btn-cerrar-popup" class="fas fa-times closed"></i></a>
+                                        <p style="color: black;" class="paragraph-info">Este es un impuesto indirecto, el cual recae sobre los costos de cada venta generada</p>
                                     </div>
                                     <div id="iva" class="container-number">
                                         <h3>$ 0</h3>
