--- a/checkout.html
+++ b/checkout.html
@@ -189,6 +189,12 @@
                                 <!-- Carts Products Here (acountCard.js) -->
                             </div>
 
+                            <div class="container-code">
+                                <input class="input-cody" type="number" placeholder="codigo descuento">
+                                <i class="fi fi-rr-ticket code-primary"></i>
+                                <button class="btn btn-primary">Aplicar</button>
+                            </div>
+
                             <!-- Total Checkout -->
 
                             <div id="container-total" class="container-total">
