--- a/shop.html
+++ b/shop.html
@@ -55,19 +55,7 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link">Inicio</a>
-                    <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-                    <a href="feature.html" class="nav-item nav-link">Tours</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Alojamientos</a>
-                        <div class="dropdown-menu">
-                            <a href="hoteles-en-cartagena-de-indias.html" class="dropdown-item">Alojamientos en
-                                Cartagena</a>
-                            <a href="hoteles-en-bogota.html" class="dropdown-item">Alojamientos en Bogotá</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item active">Alojamientos en Medellín</a>
-                        </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
+                    <a href="" class="nav-item nav-link active">Tienda</a>
                     <a id="checkout" class="btn custom-btn" onclick="pay()" href="checkout.html">Checkout</a>
                 </div>
             </div>
@@ -182,17 +170,8 @@
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href="https://instagram.com/opentour_ctg?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="footer-link">
-                                <h2>Esta Pagina</h2>
-                                <a href="">Terminos de uso</a>
-                                <a href="">Politica de privacidad</a>
-                                <a href="">Cookies</a>
-                                <a href="">Ayuda</a>
                             </div>
                         </div>
                     </div>
