--- a/checkout.html
+++ b/checkout.html
@@ -57,20 +57,8 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a id="nav" href="index.html" class="nav-item nav-link">Inicio</a>
-                    <a id="nav" href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-                    <div class="nav-item dropdown">
-                        <a id="nav" href="#" class="nav-link dropdown-toggle active"
-                            data-toggle="dropdown">Alojamientos</a>
-                        <div class="dropdown-menu">
-                            <a id="nav" href="hoteles-en-cartagena-de-indias.html" class="dropdown-item">Alojamientos en
-                                Cartagena</a>
-                            <a id="nav" href="hoteles-en-bogota.html" class="dropdown-item">Alojamientos en Bogotá</a>
-                            <a id="nav" href="hoteles-en-medellin.html" class="dropdown-item active">Alojamientos en
-                                Medellín</a>
-                        </div>
-                    </div>
-                    <a id="nav" href="contact.html" class="nav-item nav-link">Contáctanos</a>
+                    <a id="nav" href="shop.html" class="nav-item nav-link">Tienda</a>
+                    <a id="checkout" class="btn custom-btn active" onclick="pay()" href="">Checkout</a>
                 </div>
             </div>
         </div>
@@ -265,17 +253,8 @@
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href="https://instagram.com/opentour_ctg?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="footer-link">
-                                <h2>Esta Pagina</h2>
-                                <a href="">Terminos de uso</a>
-                                <a href="">Politica de privacidad</a>
-                                <a href="">Cookies</a>
-                                <a href="">Ayuda</a>
                             </div>
                         </div>
                     </div>
