--- a/checkout.html
+++ b/checkout.html
@@ -57,8 +57,7 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a id="nav" href="shop.html" class="nav-item nav-link">Tienda</a>
-                    <a id="checkout" class="btn custom-btn active" onclick="pay()" href="">Checkout</a>
+                    <a id="checkout" class="btn custom-btn active" onclick="pay()" href="shop.html">Tienda</a>
                 </div>
             </div>
         </div>
