--- a/checkout.html
+++ b/checkout.html
@@ -46,7 +46,6 @@
 </head>
 
 <body id="body">
-    <div class="loader"></div>
     <!-- Nav Bar Start -->
     <div id="coll" class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
@@ -182,6 +181,10 @@
                                 <button class="btn btn-primary">Aplicar</button>
                             </div>
 
+
+    <!-- Set up a container element for the button -->
+                            <div id="paypal-button-container"></div>
+
                             <!-- Total Checkout -->
 
                             <div id="container-total" class="container-total">
@@ -297,9 +300,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 
+    <!-- PayPay Scripts -->
+
+    <!--<script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>-->
+
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <script async src="js/checkout.js"></script>
+    <script async src="js/checkout.js" type="module"></script>
+    <script src="js/db.js" type="module"></script>
+    <!--<script src="js/paypal.js"></script>-->
     <script src="js/popup.js"></script>
 </body>
 
