--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="css/shop.css">
 </head>
 
-<body id="body">
+<body id="body-shop">
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
@@ -222,7 +222,8 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <script src="js/acountCart.js"></script>
+    <script src="js/acountCart.js" type="module"></script>
+    <!--<script src="js/db.js" type="module"></script>-->
     <script src="js/carrouselProducts.js" type="module"></script>
 </body>
 
