--- a/checkout.html
+++ b/checkout.html
@@ -165,8 +165,7 @@
                                             </div>
                                         </div>
                                         <div>
-                                            <button id="btnCheck" class="btn custom-btn" type="submit">Reserva
-                                                ya</button>
+                                            <button id="btnCheck" class="btn custom-btn" type="submit">Reserva por WhatsApp</button>
                                         </div>
                                     </form>
                                 </div>
