--- a/checkout.html
+++ b/checkout.html
@@ -155,9 +155,9 @@
                             </div>
 
                             <div class="container-code">
-                                <input class="input-cody" type="number" placeholder="codigo descuento">
+                                <input id="code" class="input-cody" type="number" placeholder="codigo descuento">
                                 <i class="fi fi-rr-ticket code-primary"></i>
-                                <button class="btn btn-primary">Aplicar</button>
+                                <button id="code-apply" class="btn btn-primary">Aplicar</button>
                             </div>
 
 
