--- a/checkout.html
+++ b/checkout.html
@@ -177,11 +177,11 @@
                                 </div>
                                 <div class="container-total-iva">
                                     <div class="iva">
-                                        <h3>IVA: <i id="info-iva" class="fi fi-rr-interrogation inte-info"></i></h3>
+                                        <h3>Descuento: <i id="info-iva" class="fi fi-rr-interrogation inte-info"></i></h3>
                                     </div>
                                     <div id="popup" style="visibility: hidden; position: absolute;" class="container-info">
                                         <a class="btn-cerrar-popup"><i id="btn-cerrar-popup" class="fas fa-times closed"></i></a>
-                                        <p style="color: black;" class="paragraph-info">Este es un impuesto indirecto, el cual recae sobre los costos de cada venta generada</p>
+                                        <p id="p" style="color: black;" class="paragraph-info">Obtén tu cupón con nuestros Hoteles aliados</p>
                                     </div>
                                     <div id="iva" class="container-number">
                                         <h3>$ 0</h3>
