--- a/checkout.html
+++ b/checkout.html
@@ -183,7 +183,7 @@
                                         <a class="btn-cerrar-popup"><i id="btn-cerrar-popup" class="fas fa-times closed"></i></a>
                                         <p id="p" style="color: black;" class="paragraph-info">Obtén tu cupón con nuestros Hoteles aliados</p>
                                     </div>
-                                    <div id="iva" class="container-number">
+                                    <div id="discount" class="container-number">
                                         <h3>$ 0</h3>
                                     </div>
                                 </div>
