--- a/shop.html
+++ b/shop.html
@@ -63,53 +63,60 @@
     <!-- Nav Bar End -->
 
 
-    <!-- Page Header Start -->
-    <div id="page-m" class="page-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1 class="h1">Los 10 Mejores Tours de Cartagena</h1>
+    <!-- Carousel Start -->
+    <div class="carousel">
+        <div class="container-fluid">
+            <div class="owl-carousel">
+                <div class="carousel-item">
+                    <div class="carousel-img">
+                        <img src="img/1 (1).jpg" alt="los mejores tures en playas de Cartagena 2022">
+                    </div>
+                    <div class="carousel-text">
+                        <h1 class="transparent">Mejores tures en Cartagena de Indias 2022</h1>
+                        <h2 class="h2">Mejores <span>Tures</span> en Cartagena</h2>
+                        <p>
+                            TourOpen te ayudará en todo lo que necesites en Cartagena.
+                        </p>
+                        <div class="carousel-btn">
+                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
+                            <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12">
-                    <a href="">Inicio</a>
-                    <a href="">Alojamiento</a>
+                <div class="carousel-item">
+                    <div class="carousel-img">
+                        <img src="img/2 (1).jpg" alt="tour en Cartagena">
+                    </div>
+                    <div class="carousel-text">
+                        <h2 class="h2">Adquiere <span>Descuentos</span> en TourOpen</h2>
+                        <p>
+                            Qué mejor que disfrutar con precios accesibles en nuestra tienda.
+                        </p>
+                        <div class="carousel-btn">
+                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
+                            <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="container_booking">
-                    <div class="container-b">
-                        <div class="container-b-city">
-                            <label for="originCity">Ciudad</label>
-                            <hr>
-                            <div class="container-b-city-input">
-                                <i id="todos" class="fi fi-rs-marker"></i>
-                                <input id="input_booking" type="text" placeholder="Dónde">
-                            </div>
-                        </div>
-                        <div class="container-b-check">
-                            <label for="originCity">Check-in - Check-out</label>
-                            <hr>
-                            <div class="container-b-check-input">
-                                <i id="todos" class="fi fi-rr-calendar"></i>
-                                <input id="input_booking" type="text" placeholder="Entrada - Salida">
-                            </div>
-                        </div>
-                        <div class="container-b-room">
-                            <label for="originCity">habitación</label>
-                            <hr>
-                            <div class="container-b-room-input">
-                                <i id="todos" class="fi fi-rr-user"></i>
-                                <input id="input_booking" type="text" placeholder="1 hab, 6 Huespedes">
-                            </div>
-                        </div>
-                        <div class="container-b-btn">
-                            <a id="btn-cus" class="btn custom-btn"
-                                href="https://www.booking.com/searchresults.es.html?aid=2233299&sid=b002c9a886e1b7d377792e7b91fd1a0e&sb=1&src=searchresults&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Fsearchresults.es.html%3Faid%3D2233299%3Bsid%3Db002c9a886e1b7d377792e7b91fd1a0e%3Btmpl%3Dsearchresults%3Bac_click_type%3Db%3Bac_position%3D0%3Bcheckin_month%3D4%3Bcheckin_monthday%3D11%3Bcheckin_year%3D2022%3Bcheckout_month%3D4%3Bcheckout_monthday%3D12%3Bcheckout_year%3D2022%3Bcity%3D-578472%3Bclass_interval%3D1%3Bdest_id%3D-592318%3Bdest_type%3Dcity%3Bdtdisc%3D0%3Bfrom_sf%3D1%3Bgroup_adults%3D2%3Bgroup_children%3D0%3Biata%3DMDE%3Binac%3D0%3Bindex_postcard%3D0%3Blabel_click%3Dundef%3Bno_rooms%3D1%3Boffset%3D0%3Bpostcard%3D0%3Braw_dest_type%3Dcity%3Broom1%3DA%252CA%3Bsb_price_type%3Dtotal%3Bsearch_selected%3D1%3Bshw_aparth%3D1%3Bslp_r_match%3D0%3Bsrc%3Dsearchresults%3Bsrc_elem%3Dsb%3Bsrpvid%3D1ccc0723cf190150%3Bss%3DMedell%25C3%25ADn%252C%2520Antioquia%252C%2520Colombia%3Bss_all%3D0%3Bss_raw%3Dmedellin%3Bssb%3Dempty%3Bsshis%3D0%3Bssne%3DBogot%25C3%25A1%3Bssne_untouched%3DBogot%25C3%25A1%26%3B&ss=Medell%C3%ADn&is_ski_area=0&ssne=Medell%C3%ADn&ssne_untouched=Medell%C3%ADn&city=-592318&checkin_year=2022&checkin_month=4&checkin_monthday=11&checkout_year=2022&checkout_month=4&checkout_monthday=12&group_adults=2&group_children=0&no_rooms=1&from_sf=1">Buscar</a>
+                <div class="carousel-item">
+                    <div class="carousel-img">
+                        <img src="img/carousel-3.jpg" alt="pasadias en Cartagena 2022">
+                    </div>
+                    <div class="carousel-text">
+                        <h2 class="h2">Tures <span>todo incluido</span></h2>
+                        <p>
+                            Adquiere tures a Islas con transporte, comida y cortesias.
+                        </p>
+                        <div class="carousel-btn">
+                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
+                            <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Page Header End -->
+    <!-- Carousel End -->
 
 
     <!-- Insert Product Start -->
